--- a/Activities/notes.html
+++ b/Activities/notes.html
@@ -354,7 +354,7 @@ completion of his doctoral defense!'>
   <img class="thumbnail" src="/images/20250317.png" data-full="/images/20250317.png" title='2025-03
 Spring scenery on campus'>
    <img class="thumbnail" src="/images/20250101(1).jpg" data-full="/images/20250101(1).jpg" title='2025-01
-Happy New Year'>
+Happy New Year!'>
   <img class="thumbnail" src="/images/202412(1).jpg" data-full="/images/202412(1).jpg" title='2024-12
 Is it not a joy to have 
 friends coming from afar?'>
